Fixed spelling error on position page

--- a/site/pages/v4/design/position-en.hbs
+++ b/site/pages/v4/design/position-en.hbs
@@ -40,7 +40,7 @@
   <p><strong>Note:</strong> The layer that is to appear behind the absolutely position object must have a CSS property that is anything but <code>static</code>. For example, grids have a CSS property of <code>position: relative</code>, so they work well with this design feature. </p>
  </div>
  <h2 class="page-header" id="options">Positioning options</h2>
- <p>The broswer will always position content on the top left. To modify the default placement, both the x and y position must be defined. The x positions are <code>pstn-left-*</code> and <code>pstn-rght-*</code>. The y positions are <code>pstn-tp-*</code> and <code>pstn-bttm-*</code>. Since positions and work together, then the posting is also responsive, so that when the grid system linearizes for smaller viewports, so do the positioning. </p>
+ <p>The broswer will always position content on the top left. To modify the default placement, both the x and y position must be defined. The x positions are <code>pstn-lft-*</code> and <code>pstn-rght-*</code>. The y positions are <code>pstn-tp-*</code> and <code>pstn-bttm-*</code>. Since positions and work together, then the posting is also responsive, so that when the grid system linearizes for smaller viewports, so do the positioning. </p>
  <table class="table table-bordered">
   <thead>
    <tr>
