Removed duplicate sentence

--- a/site/pages/v4/writing/principals-en.hbs
+++ b/site/pages/v4/writing/principals-en.hbs
@@ -508,7 +508,7 @@
     <a href="http://www.alistapart.com/articles/indefenseofeyecandy/">In defense of eye candy</a></p>
   </blockquote>
   <h4>Aesthetics and usability</h4>
-  <p>Users think aesthetically pleasing website designs are easier to use than site designs that are less pleasing. This is known as the <strong>aesthetic-usability effect</strong>. However, proper usability testing is still recommended. Aesthetics do not replace or equate to usability. Aesthetics simply enhance and complement usability. </p>
+  <p>Users think aesthetically pleasing website designs are easier to use than site designs that are less pleasing. This is known as the <strong>aesthetic-usability effect</strong>. </p>
   <p>That said, proper usability testing is still recommended. Aesthetics do not   replace or equate to usability. Aesthetics simply enhance and compliment   usability. </p>
   <blockquote class="mrgn-bttm-lg">
    <p>Aesthetic designs are more effective at fostering positive design   attitude than unaesthetic design, and make people more tolerant of   design problems ' Such personal and positive relationships with a design   evoke feelings of affection, loyalty, and patience   &mdash; all significant factors in the long-term usability and overall   success of a design.</p>
