Break up long sentences

--- a/site/pages/v4/writing/principals-en.hbs
+++ b/site/pages/v4/writing/principals-en.hbs
@@ -516,7 +516,7 @@
     <a href="http://courses.washington.edu/art479/media/universal_principles1.pdf"> Aesthetic-Usability Effect (PDF, 1.4 MB)</a></p>
   </blockquote>
   <h2 class="page-header" id="content">Content structure</h2>
-  <p>You can organize your content by audience, topic, or task, whichever best suits your users. But remember that each user is there to complete a task, so your categories should always lead to a task. However you organize your content, you need to keep the structure simple, logical, and consistent so users can quickly become familiar with it and be able to easily navigate through it.</p>
+  <p>You can organize your content by audience, topic, or task, whichever best suits your users. But remember that each user is there to complete a task, so your categories should always lead to a task. However you organize your content, you need to keep the structure simple, logical, and consistent so users can quickly become familiar with it and easily navigate through it.</p>
  </div>
 </div>
 <h3 id="heading">Headings</h3>
@@ -545,10 +545,10 @@
  </div>
  <div class="col-md-8">
   <p>The first thing users see on a Web page is the title, so the title must instantly convey the type of information the page contains. The page title must also be unique so users will not confuse one page with another.</p>
-  <p>Headings should be clear and descriptive to help guide users to the information they are looking for. Including keywords in headings, particularly in the first two words, helps users scan more easily. Subheadings make large blocks of text easier to read and scan. Be sure that subheadings are also clear and concise, and it helps if they are written using <a href="#parallel">parallel structure</a>.</p>
+  <p>Headings should be clear and descriptive to help guide users to the information they are looking for. Including keywords in headings, particularly in the first two words, helps users scan more easily. Subheadings make large blocks of text easier to read and scan. Be sure that subheadings are also clear and concise.  It helps if they are written using <a href="#parallel">parallel structure</a>.</p>
   <p>Not only is it a good writing practice to use sub-headings in longer documents, but when information is on the Web, sub-headings improve usability and readability as well.</p>
   <blockquote class="mrgn-bttm-lg">
-   <p>(A successful headings must be)</p>
+   <p>(A successful heading must be)</p>
    <ul>
     <li> <strong> short </strong> (because people  don't read much online); </li>
     <li> <strong> rich in information scent </strong>, clearly summarizing the target article; </li>
@@ -643,7 +643,7 @@
  </div>
  <div class="col-md-8">
   <p>Hyperlinks are used to guide users to the information they are looking for. They can also be used to avoid repeating information that is already clearly expressed on another Web page or to reference related information, such as definitions, supporting information, and background information.</p>
-  <p>Use the title of the target page as the text in the hyperlink; it's very confusing to users if the link text and page name don't match. However, sometimes you will need to modify the text; in those cases, attempt to match the text as closely as possible. If you refer to another Web page more than once, only add a hyperlink to the first reference. Also, avoid putting too many hyperlinks in any one paragraph because they can be confusing if they are too close together; users may not be able to tell where one hyperlink ends and the next one begins.</p>
+  <p>Use the title of the target page as the text in the hyperlink; it's very confusing to users if the link text and page name don't match. However, sometimes you will need to modify the text.  In those cases, attempt to match the text as closely as possible. If you refer to another Web page more than once, only add a hyperlink to the first reference. Also, avoid putting too many hyperlinks in a single paragraph because they can be confusing if they are too close together. Users may not be able to tell where one hyperlink ends and the next one begins.</p>
   <p>You may be tempted to add a hyperlink to any reference, but you should only add a hyperlink to references that will help users complete their task or that provide valuable information about the task. You should not add a hyperlink to unnecessary or unrelated information because too much blue, underlined text is distracting. It becomes difficult for users to distinguish between important and unimportant hyperlinks. Finally, ensure that the hyperlinks direct users to the right page. Refer to the <a href="#scent">Scent of information</a> for more on hyperlinks.</p>
  </div>
 </div>
@@ -673,7 +673,7 @@
   </div>
  </div>
  <div class="col-md-8">
-  <p>You should only add an image if it supports the information users looking for by aiding navigation or comprehension. Otherwise, the image is just in the way as users search for relevant information, or it is something they will ignore entirely. If you use an image, make sure it is professional-looking and modern and not blurry or pixelated&mdash;choose your images wisely.</p>
+  <p>You should only add an image if it supports the information users looking for by aiding navigation or comprehension. Otherwise, the image is just in the way as users search for relevant information, or it is something they will ignore entirely. If you use an image, make sure it is professional-looking, modern and not blurry or pixelated&mdash;choose your images wisely.</p>
   <blockquote class="mrgn-bttm-lg">
    <p>Users pay close attention to photos and other images that contain   relevant information but ignore fluffy pictures used to "jazz up" Web   pages.</p>
    <p class="text-right">-Nielsen Norman Group<br>
@@ -717,6 +717,6 @@
  <div class="col-md-8">
   <p>Tables can be an effective way of presenting information; however, they should only be used to display financial, statistical, comparative, or numerical information&mdash;not to serve stylistic purposes.</p>
   <p>Like text, tables should be clear and concise, with as few data elements as possible in each cell. If you need to include more than a few words in any cell, consider using another format.</p>
-  <p>If there is not enough white space in each cell, data becomes difficult to read. Ensure that each row and column has a clear and concise heading; this allows screen readers to unambiguously convey the content of the tables. Consider using a visual cue such as an alternating colour scheme to distinguish each row from the next.</p>
+  <p>If there is not enough white space in each cell, data becomes difficult to read. Ensure that each row and column has a clear and concise heading.  This allows screen readers to unambiguously convey the content of the tables. </p>
  </div>
 </div>
