--- a/site/pages/v4/writing/formatting-en.hbs
+++ b/site/pages/v4/writing/formatting-en.hbs
@@ -61,7 +61,7 @@
  <p>In general, do not assume that your reader knows the meaning of an  initialism. To introduce an initialism into a text or a group of  webpages, write the words in full, followed by the initialism in  parentheses. If your reader may not read your entire text or group of  texts, repeat the introduction in any main section or webpage where you  use the initialism. Be consistent, and avoid switching back and forth  between an initialism and the words it represents.</p>
  <p>You can adjust your use of initialisms to suit particular readers. For instance, if your target audience is <abbr title="Canada Revenue Agency">CRA</abbr> employees, you can omit the full name of the organization and simply use the initialism. </p>
  <h4>Initialisms in titles and headings</h4>
- <p>In general, do not introduce an initialism in a title or a heading. However,  you may want to use an initialism in a title or a heading. In that  case, introduce the initialism in the body of the text by writing the  words in full, followed by the initialism in parentheses.</p>
+ <p>In general, do not introduce an initialism in a title or a heading. If you want to use an initialism in a title or a heading, introduce the initialism in the body of the text by writing the  words in full, followed by the initialism in parentheses.</p>
  <div class="well">
   <h3 class="mrgn-tp-0 h4">Examples</h3>
   <p>Section 1.2 &ndash; Contractual joint venture<br />
@@ -155,12 +155,12 @@
   Rimouski QC  G5L 5H9
   </p>
  </div>
- <p>When an <strong>ordinal number precedes the word <em>rue</em>, <em>avenue</em>, or <em>boulevard</em></strong> <em>(2e Rue)</em>,  do not translate it. In accordance with French addressing, include a  comma after the building number, superscript part of the numeral <em><strong>(1re, 2e, 5e)</strong></em>, and capitalize the first letter of <em><strong>Rue</strong></em>, <em><strong>Avenue</strong></em>, or <em><strong>Boulevard</strong></em>, which is the official name of the thoroughfare.</p>
+ <p>When an <strong>ordinal number precedes the word <em>rue</em>, <em>avenue</em>, or <em>boulevard</em></strong> <em>(2e rue)</em>,  do not translate it. In accordance with French addressing, include a  comma after the building number, superscript part of the numeral <em><strong>(1<sup>re</sup>, 2<sup>e</sup>, 5<sup>e</sup>)</strong></em>, and capitalize the first letter of <em><strong>Rue</strong></em>, <em><strong>Avenue</strong></em>, or <em><strong>Boulevard</strong></em>, which is the official name of the thoroughfare.</p>
  <div class="well">
   <h4 class="mrgn-tp-0">Example</h4>
   <p class="mrgn-bttm-0">
   Mr. Paul Truman<br />
-  4687, 5e Rue<br />
+  4687, 5<sup>e</sup> Rue<br />
   Montr&eacute;al QC  H1Y 3N5
   </p>
  </div>
