Corrected missing comma

--- a/site/pages/v4/writing/principals-en.hbs
+++ b/site/pages/v4/writing/principals-en.hbs
@@ -673,7 +673,7 @@
   </div>
  </div>
  <div class="col-md-8">
-  <p>You should only add an image if it supports the information users looking for by aiding navigation or comprehension. Otherwise, the image is just in the way as users search for relevant information, or it is something they will ignore entirely. If you use an image, make sure it is professional-looking, modern and not blurry or pixelated&mdash;choose your images wisely.</p>
+  <p>You should only add an image if it supports the information users looking for by aiding navigation or comprehension. Otherwise, the image is just in the way as users search for relevant information, or it is something they will ignore entirely. If you use an image, make sure it is professional-looking, modern, and not blurry or pixelated&mdash;choose your images wisely.</p>
   <blockquote class="mrgn-bttm-lg">
    <p>Users pay close attention to photos and other images that contain   relevant information but ignore fluffy pictures used to "jazz up" Web   pages.</p>
    <p class="text-right">-Nielsen Norman Group<br>
