Fixed and removed various broken links.

--- a/site/pages/v4/accessibility/guide-en.hbs
+++ b/site/pages/v4/accessibility/guide-en.hbs
@@ -192,7 +192,7 @@
     <li><a href="http://www.w3.org/TR/2012/NOTE-WCAG20-TECHS-20120103/G161" rel="external" title="WCAG 2.0, Technique G161"><big>Search engine</big></a> for the site.</li>
    </ul>
    <div class="alert alert-danger mrgn-tp-lg">
-    <p id="ic"><strong>Important:</strong> Links have additional requirements because they are a type of <a href="#ui"><abbr title="User Interface">UI control</abbr></a>.</p>
+    <p><strong>Important:</strong> Links have additional requirements because they are a type of <a href="#ui"><abbr title="User Interface">UI control</abbr></a>.</p>
    </div>
   </div>
  </div>
@@ -521,14 +521,14 @@
     </li>
    </ul>
    <div class="alert alert-danger mrgn-tp-lg">
-    <p id="ic"><strong>Important:</strong> Form elements have additional requirements because they are a type of <a href="#ui"><abbr title="User Interface">UI control</abbr></a>.</p>
+    <p><strong>Important:</strong> Form elements have additional requirements because they are a type of <a href="#ui"><abbr title="User Interface">UI control</abbr></a>.</p>
    </div>
   </div>
  </div>
  <!-- UI Controls -->
  <div class="row">
   <div class="mrgn-lft-md mrgn-rght-md">
-   <h2 id="pgtitle" class="page-header"><abbr title="User Interface">UI</abbr> controls</h2>
+   <h2 id="ui" class="page-header"><abbr title="User Interface">UI</abbr> controls</h2>
   </div>
   <div class="col-md-4 pull-right">
    <div class="panel panel-default">
