--- a/site/pages/v4/accessibility/index-en.hbs
+++ b/site/pages/v4/accessibility/index-en.hbs
@@ -33,7 +33,7 @@
   <blockquote>
    <p>The most important blind visitor to your website is Google! In the same way that creating accessible web pages helps disabled person access your content, it also helps Google index your pages so that the right people can find your service or product.</p>
    <p class="text-right">-Jim Byrne<br>
-    Founder of <a href="http://www.gawds.org/">Guild of Accessible Web Designers</a></p>
+    Founder of Guild of Accessible Web Designers</p>
   </blockquote>
   <blockquote>
    <p>The term accessibility can be understood to mean accommodating characteristics a person cannot change.</p>
