--- a/site/pages/v4/design/index-en.hbs
+++ b/site/pages/v4/design/index-en.hbs
@@ -143,7 +143,7 @@
     <td>data-ajax</td>
    </tr>
    <tr>
-    <td><a href="http://wet-boew.github.io/v4.0-ci/demos/data-inview/data-inview-bar-en.html">Data Inview: Bar</a></td>
+    <td><a href="http://wet-boew.github.io/v4.0-ci/demos/data-inview/data-inview-en.html">Data Inview: Bar</a></td>
     <td>Plugin</td>
     <td>Displays a bar when a section moves out of the viewport.</td>
     <td>data-inview</td>
@@ -324,7 +324,7 @@
     <td>twitter</td>
    </tr>
    <tr>
-    <td><a href="http://wet-boew.github.io/v4.0-ci/demos/theme-wet-boew/index-en.html">WET theme</a></td>
+    <td><a href="http://wet-boew.github.io/v4.0-ci/theme/index-en.html">WET theme</a></td>
     <td>Other</td>
     <td>The WET theme was developed to provide an example implementation of the Base Theme.</td>
     <td>theme-wet-boew</td>
