--- a/site/pages/v4/design/options-en.hbs
+++ b/site/pages/v4/design/options-en.hbs
@@ -185,7 +185,7 @@
    </div>
   </div>
   <div class="col-md-6">
-   <div class="panel panel-default" id="images">
+   <div class="panel panel-default">
     <div class="panel-heading">
      <h2 class="panel-title">Alignment and floats</h2>
     </div>
@@ -827,22 +827,22 @@
       </div>
      </div>
      <div class="form-group has-warning">
-      <label for="inputEmail" class="col-md-2 control-label">Success</label>
+      <label for="successInputEmail" class="col-md-2 control-label">Success</label>
       <div class="col-md-10">
-       <input type="text" class="form-control" placeholder="Email">
+       <input type="text" class="form-control" id="successInputEmail" placeholder="Email">
       </div>
      </div>
      <div class="form-group has-error">
-      <label for="inputEmail" class="col-md-2 control-label">Warning</label>
+      <label for="warningInputEmail" class="col-md-2 control-label">Warning</label>
       <div class="col-md-10">
-       <input type="text" class="form-control" id="inputEmail" placeholder="Email">
+       <input type="text" class="form-control" id="warningInputEmail" placeholder="Email">
       </div>
      </div>
      <div class="form-group has-success">
-      <label for="inputEmail" class="col-md-2 control-label">Error</label>
+      <label for="errorInputEmail" class="col-md-2 control-label">Error</label>
       <div class="col-md-10">
        <p></p>
-       <input type="text" class="form-control" id="inputEmail" placeholder="Email">
+       <input type="text" class="form-control" id="errorInputEmail" placeholder="Email">
       </div>
      </div>
     </form>
