--- a/site/pages/v4/writing/formatting-en.hbs
+++ b/site/pages/v4/writing/formatting-en.hbs
@@ -605,7 +605,7 @@
    <li>She published an article on botanical gardens in the July 1998 issue of <em>Canadian Living</em>.</li>
   </ul>
  </div>
- <h2 class="page-header" id="Contractions">Contractions</h2>
+ <h2 class="page-header" id="contractions">Contractions</h2>
  <p>Contractions can give an informal tone to a document, and they are  often used in promotional material such as posters and advertisements.  You can use <strong>not</strong> contractions (don't, can't, won't, and isn't) and <strong>is</strong> contractions (we're, she's, it's). Do not use contractions for <strong>had</strong>, <strong>have</strong>, <strong>should</strong>, and <strong>would</strong> (you'd, he'd, we've).</p>
  <p>Do not use contractions in formal writing such as publications, correspondence, and reports. </p>
  <p>Be sure not to confuse <strong>its</strong> (the possessive form of <strong>it</strong>) with <strong>it's</strong> (the contraction of <strong>it is</strong>). </p>
@@ -637,7 +637,7 @@
    <li>Section 1 &ndash; Identification </li>
   </ul>
  </div>
- <p>Use a <strong>hyphen</strong> (-), without spaces before or after it, in some <a href="#Hyphenating">compound terms</a> and in some words with prefixes (such as co-, pre-, re-, semi-, and non-). In Microsoft Word, you can create a non-breaking hyphen by pressing the <strong>Ctrl</strong>, <strong>Shift</strong>, and <strong>hyphen</strong> (-) keys at the same time.</p>
+ <p>Use a <strong>hyphen</strong> (-), without spaces before or after it, in some <a href="#hyphenating">compound terms</a> and in some words with prefixes (such as co-, pre-, re-, semi-, and non-). In Microsoft Word, you can create a non-breaking hyphen by pressing the <strong>Ctrl</strong>, <strong>Shift</strong>, and <strong>hyphen</strong> (-) keys at the same time.</p>
  <div class="well">
   <h4>Examples</h4>
   <ul>
@@ -943,7 +943,7 @@
  <p>Use a hyphen if adding a prefix to a word might result in mispronunciation (for example, <strong>re-enter </strong>instead of <strong>reenter</strong>) or a change in meaning of the word (for example, <strong>re-cover</strong> instead of <strong>recover</strong>, <strong>re-form</strong> instead of <strong>reform</strong>, or <strong>pre-serve</strong> instead of <strong>preserve</strong>).</p>
  <p><strong>Special rules</strong>: Use the non-hyphenated <strong>online</strong> instead of <strong>on-line </strong>and <strong>email</strong> instead of <strong>e-mail</strong>.</p>
  <h2 class="page-header" id="italics">Italics</h2>
- <p>Italics are difficult to read. <strong>Do not</strong> use italics to highlight or emphasize terms. Use <a href="#Bold">bold</a> instead.</p>
+ <p>Italics are difficult to read. <strong>Do not</strong> use italics to highlight or emphasize terms. Use <a href="#bold">bold</a> instead.</p>
  <h3>Italics: Forms and publications</h3>
  <p>Use italics for the proper titles of <a href="#form">forms and publications</a>:</p>
  <div class="well">
