--- a/site/pages/v4/design/forms-en.hbs
+++ b/site/pages/v4/design/forms-en.hbs
@@ -636,7 +636,7 @@
  <p>You can also add optional feedback icons with the addition of an extra class and the right icon.</p>
  <div class="alert alert-warning">
   <h4>Icons and input groups</h4>
-  <p>When using the feedback icons, be aware that manual positioning may be required for <a href="../components#input-groups">input groups</a> with an add-on on the right. Adjust the <code>right: 0;</code> to an appropriate pixel value depending on the width of your addon.</p>
+  <p>When using the feedback icons, be aware that manual positioning may be required for <a href="#input-groups">input groups</a> with an add-on on the right. Adjust the <code>right: 0;</code> to an appropriate pixel value depending on the width of your addon.</p>
  </div>
  <form role="form" method="get" action="#">
   <div class="form-group has-success has-feedback">
