--- a/site/pages/v4/design/images-en.hbs
+++ b/site/pages/v4/design/images-en.hbs
@@ -31,7 +31,7 @@
     <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
     <ul class="list-unstyled mrgn-lft-lg lst-spcd">
      <li><a href="visible-en.html#replacement">Icons<span class="wb-inv"> - Design guide</span></a></li>
-     <li><a href="visible.html#replacement">Image replacement<span class="wb-inv"> - Design guide</span></a></li>
+     <li><a href="visible-en.html#replacement">Image replacement<span class="wb-inv"> - Design guide</span></a></li>
      <li><a href="http://wet-boew.github.io/v4.0-ci/demos/lightbox/lightbox-en.html">Lightbox<span class="wb-inv"> - Design guide</span></a></li>
      <li><a href="http://wet-boew.github.io/v4.0-ci/demos/tabs/tabs-carousel-en.html">Tabbed interface: Carousel<span class="wb-inv"> - Design guide</span></a></li>
      <li><a href="http://wet-boew.github.io/v4.0-ci/demos/data-picture/data-picture-en.html">Data picture<span class="wb-inv"> - Design guide</span></a></li>
