--- a/site/pages/v4/design/reflow-en.hbs
+++ b/site/pages/v4/design/reflow-en.hbs
@@ -28,7 +28,7 @@
     <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
     <ul class="list-unstyled mrgn-lft-lg lst-spcd">
      <li><a href="grids-en.html">Grids<span class="wb-inv"> - Design guide </span></a></li>
-     <li><a href="floats-en-en.html">Floats<span class="wb-inv"> - Design guide </span></a></li>
+     <li><a href="floats-en.html">Floats<span class="wb-inv"> - Design guide </span></a></li>
      <li><a href="proximity-en.html">Margin proximity<span class="wb-inv"> - Design guide </span></a></li>
     </ul>
    </div>
