--- a/site/pages/v4/design/visible-en.hbs
+++ b/site/pages/v4/design/visible-en.hbs
@@ -220,8 +220,8 @@
    <p>Force an element to be shown or hidden with the use of <code>.show</code> and <code>.hidden</code> classes. These classes use <code>!important</code> to a
    <p>Furthermore, <code>.invisible</code> can be used to toggle only the visibility of an element, meaning its <code>display</code> is not modified and the element can still affect the flow of the document.</p>
    <div class="mrgn-tp-lg">
-    <pre><code>&lt;div class=<span class="s">"show"&gt;...&lt;/div&gt;
-&lt;div class=<span class="s">"hidden"&gt;...&lt;/div&gt;
+    <pre><code>&lt;div class="show"&gt;...&lt;/div&gt;
+&lt;div class="hidden"&gt;...&lt;/div&gt;
 </code></pre>
    </div>
    <div class="mrgn-tp-lg">
@@ -251,7 +251,7 @@
    <h2 id="replacement">Image replacement</h2>
    <p>Utilize the <code>.text-hide</code> class or mixin to help replace an element's text content with a background image.</p>
    <div class="mrgn-tp-lg">
-    <pre><code>&lt;h1 class=<span class="s">"text-hide"&gt;Custom heading&lt;/h1&gt;
+    <pre><code>&lt;h1 class="text-hide"&gt;Custom heading&lt;/h1&gt;
 </code></pre>
    </div>
    <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
