--- a/site/pages/v4/design/grids-en.hbs
+++ b/site/pages/v4/design/grids-en.hbs
@@ -410,7 +410,7 @@
 &lt;/div&gt;
 </code></pre>
  </div>
- <p>In addition to column clearing at responsive breakpoints, you may need to <strong>reset offsets, pushes, or pulls</strong>. Those resets are available for medium and large grid tiers only, since they start only at the (second) small grid tier. See this in action in <a href="file:///C|/Users/Toshiba/Desktop/examples/grid">the grid example</a>.</p>
+ <p>In addition to column clearing at responsive breakpoints, you may need to <strong>reset offsets, pushes, or pulls</strong>. Those resets are available for medium and large grid tiers only, since they start only at the (second) small grid tier. See this in action in the grid example.</p>
  <div class="mrgn-tp-lg">
   <pre><code>&lt;div class=&quot;row&quot;&gt;
   &lt;div class=&quot;col-sm-5 col-md-6&quot;&gt;.col-sm-5 .col-md-6&lt;/div&gt;
