Progress bar: updated usage message

--- a/site/pages/v4/design/progress-en.hbs
+++ b/site/pages/v4/design/progress-en.hbs
@@ -9,7 +9,8 @@
 ---
 <div class="wb-prettify all-pre">
  <div class="alert alert-danger">
-  <p class="lead">Do not use this Bootstrap effect.  Instead use the <a href="http://wet-boew.github.io/v4.0-ci/demos/progress/progress-en.html">Progress polyfill</a> feature in WET.  The documentation below will be updated shortly to clarify this recommendation.</p>
+  <p class="lead">
+    Use the HTML5 progress element. Examples are provided in the <a href="http://wet-boew.github.io/v4.0-ci/demos/progress/progress-en.html">Progress polyfill working examples</a>.</p>
  </div>
  <div class="row">
   <div class="col-md-8">
